# ndk_memory_leak_tracker

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/: .gitignore  android.cmake  common.cmake  git_utils.cmake  readme.md  vcpkg.android.cmake  vcpkg.mingw.cmake  vcpkg_utils.cmake
src/: hashmap.c  hashmap.h  memory_tracer.cpp  memory_tracer.h  memory_utils.cpp  memory_utils.h
test/: CMakeLists.txt  test.cpp
